# thermalright-trcc-linux-multipleGPU

./: .gitignore  API_SPEC.md  CLAUDE.md  CONTRIBUTING.md  LEXICON.md  README.md  TRCC_REMOTE_GUIDE.md  flake.nix  install.sh  pyproject.toml  trcc-linux.desktop
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.md  device-request.md
.github/workflows/: ci.yml  codeql.yml  macos.yml  release.yml  stale.yml  tests.yml  windows.yml
dev/: mock_gui.py
doc/: API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_HISTORY.md  CHANGELOG.md  CLI_REFERENCE.md  DEPLOY_HEADLESS_SERVICE.md  DEVELOPMENT_STATUS.md  DEVICE_TESTING.md  GUIDE_INSTALL.md  GUIDE_NEW_TO_LINUX.md  GUIDE_USER.md  INSTALL_GUIDE.md  REFERENCE_API.md  REFERENCE_CLI.md  STABILITY_REPORT.md  SUPPORTED_DEVICES.md  TARGET_ARCHITECTURE.md  TECHNICAL_REFERENCE.md  TESTERS_WANTED.md  TRCC_CONTRACT.md  TROUBLESHOOTING.md  USBLCDNEW_PROTOCOL.md  USBLCD_PROTOCOL.md  USBLED_PROTOCOL.md  gpu_data_flow.md
doc/screenshots/: README.md
installer/: trcc-usb.inf  trcc.iss
native/macos/trcc_powermetrics_helper/: Makefile  com.thermalright.trcc.powermetrics.plist  install-helper.sh  main.c
packaging/: SUBMITTING.md
packaging/arch/: .SRCINFO  PKGBUILD
packaging/debian/: changelog  control
packaging/gentoo/: trcc-linux-6.5.3.ebuild  trcc-linux-8.1.1.ebuild  trcc-linux-8.7.6.ebuild  trcc-linux-8.8.1.ebuild
packaging/rpm/: trcc-linux.spec
src/trcc/: __init__.py  __main__.py  __version__.py  _entry.py  api.py  cli.py  conf.py  ipc.py
src/trcc/api/: __init__.py  _boot.py  control_center.py  devices.py  display.py  i18n.py  led.py  models.py  system.py  themes.py
src/trcc/assets/: trcc-quirk-fix.service
src/trcc/cli/: __init__.py  _boot.py  _connect.py  _control_center.py  _device.py  _diag.py  _display.py  _i18n.py  _led.py  _status.py  _system.py  _theme.py
src/trcc/core/: __init__.py  _logging.py  app.py  builder.py  color.py  command_bus.py  control_center_commands.py  controllers.py  device.py  events.py  i18n.py  lcd_commands.py  lcd_device.py  led_commands.py  led_device.py  led_segment.py  macos_app_bundle_launch.py  models.py  orientation.py  paths.py  platform.py  ports.py  results.py  trcc.py
src/trcc/data/: trcc_usb.te
src/trcc/gui/: __init__.py  base.py  base_handler.py  constants.py  display_mode_panels.py  lcd_handler.py  led_handler.py  overlay_element.py  overlay_grid.py  trcc_app.py  uc_about.py  uc_color_wheel.py  uc_device.py  uc_image_cut.py  uc_info_module.py  uc_led_control.py  uc_preview.py  uc_screen_led.py  uc_sensor_picker.py  uc_theme_local.py  uc_video_cut.py
src/trcc/install/: gui.py
src/trcc/next/: __init__.py  __main__.py  app.py
src/trcc/qt_components/: __init__.py  assets.py  base.py  constants.py  display_mode_panels.py  lcd_handler.py  led_handler.py  overlay_element.py  pipewire_capture.py  qt_app_mvc.py  splash.py  trcc_app.py  uc_about.py  uc_activity_sidebar.py  uc_color_wheel.py  uc_device.py  uc_info_module.py  uc_led_control.py  uc_screen_led.py  uc_sensor_picker.py  uc_seven_segment.py  uc_system_info.py  uc_theme_mask.py  uc_theme_setting.py  uc_theme_web.py
src/trcc/services/: __init__.py  audio.py  device.py  display.py  image.py  lcd_config.py  led.py  led_config.py  led_effects.py  media.py  overlay.py  perf.py  system.py  theme.py  theme_loader.py  theme_persistence.py  video_cache.py
src/trcc/ui/: __init__.py
tests/: README.md  conftest.py  mock_platform.py  noop_transports.py  test_all_devices.py  test_api.py  test_api_ext.py  test_architecture.py  test_ax120_display.py  test_base_panel.py  test_cli.py  test_cli_device.py  test_cli_display.py  test_cli_led.py  test_cli_system.py  test_cli_theme.py  test_cloud_video.py  test_conf.py  test_controllers.py  test_cpu.py  test_cpu_usage.py  test_data_repository.py  test_dc_parser.py  test_debug_report.py  test_debug_report_ext.py  test_device_bulk.py  test_device_detector.py  test_device_implementations.py  test_device_lcd.py  test_device_led_kvm.py  test_device_ly.py  test_device_scsi.py  test_doctor.py  test_doctor_ext.py  test_frame_device.py  test_hardware_info.py  test_hr10_display.py  test_integration.py  test_lcd_panel_visual.py  test_led_panel_visual.py  (+14 more)
tests/adapters/detection/: test_facade_bsd.py  test_facade_macos.py  test_facade_windows.py  test_factory_detector.py
tests/adapters/device/: conftest.py  test_bsd_scsi.py  test_bulk.py  test_detector.py  test_factory.py  test_frame.py  test_hid.py  test_implementations.py  test_lcd.py  test_led.py  test_led_kvm.py  test_ly.py  test_macos_detector.py  test_macos_scsi.py  test_scsi.py  (+2 more)
tests/api/: conftest.py  test_api.py  test_api_buses.py  test_api_security.py
tests/cli/: conftest.py  test_cli.py  test_cli_buses.py  test_device.py  test_display.py  test_led.py  test_serve.py  test_system.py  test_theme.py
tests/core/: test_app_buses.py  test_app_lifecycle.py  test_app_scan.py  test_builder.py  test_builder_routing.py  test_command_bus.py  test_device_isolation.py  test_i18n.py  test_lcd_device.py  test_led_device.py  test_led_segment.py  test_led_segment_ax120.py  test_models.py  test_orientation.py  test_paths.py  test_proxy_factory.py
tests/gui/: conftest.py  test_base.py  test_base_panel.py  test_constants.py  test_lcd_handler.py  test_led_control.py  test_misc.py  test_preview.py  test_screen_capture.py  test_theme_mask.py  test_theme_setting.py  test_trcc_app.py  test_widgets.py
tests/hid_testing/: conftest.py  test_device_factory.py  test_device_hid.py  test_device_led.py  test_led_controller.py
tests/next/: __init__.py  conftest.py  test_autostart.py  test_commands.py  test_dc_reader.py  test_sensors.py  test_theme_service.py  test_transports.py  test_udev.py
tests/qt_components/: test_lcd_handler.py  test_theme_mask.py  test_trcc_app.py  test_widgets.py
tests/services/: test_display_integration.py  test_led.py  test_led_config.py  test_perf.py  test_services.py  test_system.py  test_theme.py  test_theme_loader.py  test_theme_persistence.py  test_video_cache.py
tools/: build_windows.ps1  diagnose.py  pack_theme_archives.py
(+315 files in other folders)
