[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trcc-linux"
version = "9.5.0"
description = "Linux implementation of Thermalright LCD Control Center"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "TRCC Linux Contributors" }
]
keywords = ["thermalright", "lcd", "cooling", "hardware", "monitor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "PySide6>=6.5.0",
    "numpy>=1.24.0",
    "psutil>=5.9.0",
    "pyusb>=1.2.0",
    "click>=7.0",
    "typer>=0.9.0",
    "fastapi>=0.100",
    "tzdata>=2024.1; sys_platform == 'win32'",
    "uvicorn[standard]>=0.20",
    "python-multipart>=0.0.6",
    "prompt_toolkit>=3.0.0",
    "sounddevice>=0.4.6",
    "wmi>=1.5.1; sys_platform == 'win32'",
    "certifi>=2023.7.22",
]

[project.optional-dependencies]
nvidia = [
    "nvidia-ml-py>=11.0.0",
]
wayland = [
    "dbus-python>=1.3.0",
    "PyGObject>=3.42.0",
]
windows = [
    "wmi>=1.5.1; sys_platform == 'win32'",
]
hid = [
    "hidapi>=0.14.0",
]
remote = [
    "qrcode>=7.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "httpx>=0.24.0",
    "types-qrcode>=7.0",
]
all = [
    "trcc-linux[nvidia,wayland,hid,remote,dev]",
]

[project.urls]
Homepage = "https://github.com/Lexonight1/thermalright-trcc-linux"
Documentation = "https://github.com/Lexonight1/thermalright-trcc-linux#readme"
Repository = "https://github.com/Lexonight1/thermalright-trcc-linux"
Issues = "https://github.com/Lexonight1/thermalright-trcc-linux/issues"

[project.scripts]
# `trcc` honors the TRCC_NEXT env var — unset = legacy, set = next/.
trcc = "trcc._entry:main"
trcc-gui = "trcc.ui.cli:gui"
trcc-detect = "trcc.ui.cli:detect"
trcc-test = "trcc.ui.cli:test_display"
# Direct opt-in to next/ (doesn't touch TRCC_NEXT).
trcc-next = "trcc.next.ui.cli.main:main"

[project.gui-scripts]
trcc-lcd = "trcc.ui.cli:gui"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]
exclude = [
    "**/*.7z",
    "**/web_cache/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trcc"]
exclude = [
    "**/*.7z",
    "**/web_cache/**",
    # Theme/web data is downloaded on first run — never ship in wheel.
    "**/data/Theme*/**",
    "**/data/Web/**",
]
artifacts = [
    # Only GUI assets — never data/ (themes are downloaded on first run).
    "**/assets/**/*.png",
    "**/assets/**/*.gif",
    "**/assets/**/*.ttf",
    "**/assets/**/*.otf",
    "**/assets/**/*.TTC",
    "**/assets/**/*.desktop",
    "**/assets/**/*.service",
    "**/assets/**/*.policy",
    "**/assets/**/*.svg",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short -n auto"
# pyusb 1.3.1 uses _pack_ in ctypes — deprecated in Python 3.14 (pyusb#535)
# Remove once pyusb releases a fix with _layout_ = 'ms'
filterwarnings = [
    "ignore::DeprecationWarning:usb.*",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "W",     # pycodestyle warnings
    "I",     # isort
    "UP",    # pyupgrade (PEP 585, 604, 613, 695-compatible modernizations)
    "B",     # flake8-bugbear (mutable defaults, unused loops, etc.)
    "SIM",   # flake8-simplify
    "PIE",   # flake8-pie (unnecessary placeholders, dict updates)
    "RUF",   # ruff-native rules
    "FA",    # flake8-future-annotations (require `from __future__ import annotations`)
    "PTH",   # flake8-use-pathlib (prefer pathlib over os.path)
]
ignore = [
    "E501",   # line length — wrapping not always clearer
    "SIM108", # ternary not always clearer than if/else
    "RUF012", # mutable class attrs (PySide6 signals trip this)
    "RUF001", # ambiguous unicode in strings (°, ✓ are intentional)
    "RUF002", # ambiguous unicode in docstrings (same)
    "RUF003", # ambiguous unicode in comments (same)
    "SIM105", # suppressible-exception — try/except None reads clearer than contextlib.suppress
    "SIM102", # collapsible-if — nested ifs sometimes clearer when conditions are unrelated
    "B008",   # function-call-in-default — typer.Argument / FastAPI Form / Depends require this pattern
    "B027",   # empty-method-without-abstract — Template Method default no-op hooks (configure_dpi, auto_setup, …) are intentional
]

# Per-directory rules — legacy `src/trcc/` is scheduled for deletion in
# Phase E (cutover to `src/trcc/next/`).  Retrofitting pathlib there is
# debt-thrown-out, so PTH stays strict in `next/` only.  Note: ruff uses
# gitignore-style globs, so `*` matches across slashes — we must list each
# legacy subtree by name and skip top-level files (no PTH violations there).
[tool.ruff.lint.per-file-ignores]
# Legacy subtrees — PTH/SIM117/SIM115 retrofits would be discarded at Phase E cutover.
"src/trcc/adapters/**/*.py" = ["PTH", "SIM115", "SIM117"]
"src/trcc/core/**/*.py" = ["PTH", "SIM115", "SIM117"]
"src/trcc/install/**/*.py" = ["PTH", "SIM115", "SIM117"]
"src/trcc/services/**/*.py" = ["PTH", "SIM115", "SIM117"]
"src/trcc/ui/**/*.py" = ["PTH", "SIM115", "SIM117"]
# Legacy top-level files
"src/trcc/__init__.py" = ["PTH", "SIM115", "SIM117"]
"src/trcc/__main__.py" = ["PTH", "SIM115", "SIM117"]
"src/trcc/__version__.py" = ["PTH", "SIM115", "SIM117"]
"src/trcc/_entry.py" = ["PTH", "SIM115", "SIM117"]
"src/trcc/conf.py" = ["PTH", "SIM115", "SIM117"]
"src/trcc/ipc.py" = ["PTH", "SIM115", "SIM117"]

[tool.coverage.run]
source = ["trcc"]
branch = true
concurrency = ["multiprocessing", "thread"]
parallel = true

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "Linux"
include = ["src"]
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportMissingImports = "warning"
reportOptionalMemberAccess = "error"
reportAttributeAccessIssue = "error"
reportArgumentType = "error"
reportCallIssue = "error"
reportOptionalIterable = "error"
reportOptionalOperand = "error"
